--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Website of Louis Vogt, game developer and musician"/>
+    <meta name="description" content="Website of Louis Vogt, game developer"/>
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <title>Louis Vogt</title>
   </head>
   <body>
