--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Website of Louis Vogt, game developer"/>
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link href="https://mstdn.social/@vuewis" rel="me">
     <title>Louis Vogt</title>
   </head>
   <body>
